--- a/templates/questionnaire/edit.publication.tool.html
+++ b/templates/questionnaire/edit.publication.tool.html
@@ -3,14 +3,14 @@
     <div class="col-xs-12 col-md-6">
         <h2 class="modal-title">
             <span class="glyphicon glyphicon-pencil"></span>
-            Edit Published Questionnaire
+            {{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.TITLE'|translate}}
         </h2>
     </div>
     <div class="modal-buttons col-xs-12 col-md-6">
     <span>
       <form method="post" ng-submit="updatePublishedQuestionnaire()">
-        <input class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="Save Changes">
-        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="Cancel">
+        <input class="btn btn-primary submit" ng-class="{'disabled': !checkForm()}" type="submit" value="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.SAVE'|translate}}">
+        <input ng-click="cancel()" class="btn btn-danger cancel" type="button" value="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.CANCEL'|translate}}">
       </form>
     </span>
     </div>
@@ -22,20 +22,20 @@
         <div uib-accordion-group is-open="titleSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>Titles </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
+                    <strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.TITLES'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
                     <div class="input-group">
-                        <span class="input-group-addon">EN</span>
-                        <textarea class="form-control" rows="1" ng-model="publishedQuestionnaire.name_EN" placeholder="English Title" ng-change="detailsUpdated()"></textarea>
+                        <span class="input-group-addon">{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.ENGLISH_TITLE'|translate}}</span>
+                        <textarea class="form-control" rows="1" ng-model="publishedQuestionnaire.name_EN" placeholder="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.PLACEHOLDER_ENGLISH_TITLE'|translate}}" ng-change="detailsUpdated()"></textarea>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <div class="input-group">
-                        <span class="input-group-addon">FR</span>
-                        <textarea class="form-control" rows="1" ng-model="publishedQuestionnaire.name_FR" placeholder="Titre Français" ng-change="detailsUpdated()"></textarea>
+                        <span class="input-group-addon">{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.FRENCH_TITLE'|translate}}</span>
+                        <textarea class="form-control" rows="1" ng-model="publishedQuestionnaire.name_FR" placeholder="{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.PLACEHOLDER_FRENCH_TITLE'|translate}}" ng-change="detailsUpdated()"></textarea>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
         <div uib-accordion-group is-open="frequencySection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>Publish Frequency </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': frequencySection.open, 'glyphicon-chevron-right': !frequencySection.open}"></i>
+                    <strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.FREQUENCY'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': frequencySection.open, 'glyphicon-chevron-right': !frequencySection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
@@ -238,20 +238,20 @@
         <div uib-accordion-group is-open="patientTriggerSection.open">
             <uib-accordion-heading>
                 <div>
-                    <strong>Trigger to Send By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patientTriggerSection.open, 'glyphicon-chevron-right': !patientTriggerSection.open}"></i>
+                    <strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.TRIGGER_PATIENT'|translate}} </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': patientTriggerSection.open, 'glyphicon-chevron-right': !patientTriggerSection.open}"></i>
                 </div>
             </uib-accordion-heading>
             <div class="alert alert-info" role="alert">
-                <strong>Current Patient Triggers</strong><br>
+                <strong>{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.CURRENT_TRIGGER_PATIENT'|translate}}</strong><br>
                 <p>
                     <span class="fa fa-angle-double-right" style="padding-right: 7px;" ng-if="!checkTriggers(patientTriggerList) || selectAll.patient.all"></span>
-                    <span ng-if="!checkTriggers(patientTriggerList)">No trigger</span>
-                    <span ng-if="checkTriggers(patientTriggerList) && selectAll.patient.all">All patients</span>
-                <ul class="list-items" ng-if="checkTriggers(patientTriggerList) && !selectAll.patient.all">
-                    <li ng-repeat="patient in patientTriggerList | filter: {added: 1} : 1">
-                        {{patient.name}}
-                    </li>
-                </ul>
+                    <span ng-if="!checkTriggers(patientTriggerList)">{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.NO_TRIGGER'|translate}}</span>
+                    <span ng-if="checkTriggers(patientTriggerList) && selectAll.patient.all">{{'QUESTIONNAIRE_MODULE.PUBLICATION_TOOL_EDIT.ALL_PATIENTS'|translate}}</span>
+                    <ul class="list-items" ng-if="checkTriggers(patientTriggerList) && !selectAll.patient.all">
+                        <li ng-repeat="patient in patientTriggerList | filter: {added: 1} : 1">
+                            {{patient.name}}
+                        </li>
+                    </ul>
                 </p>
             </div>
             <div class="list-space">
@@ -348,8 +348,8 @@
                     <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                     <span ng-if="!checkTriggers(appointmentStatusList)">No filter</span>
                     <span ng-repeat="selectedAppointmentStatus in appointmentStatusList | filter: {added: 1} : 1" ng-if="checkTriggers(appointmentStatusList)">
-              {{selectedAppointmentStatus.name}}
-          </span>
+                        {{selectedAppointmentStatus.name}}
+                    </span>
                 </p>
             </div>
             <div class="row">
