--- a/templates/legacy-questionnaire/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire/legacy-questionnaire.html
@@ -13,7 +13,9 @@
                         <div class="col-xs-12 col-md-6 title-content">
                             <span class="fa fa-pencil-square"></span>
                             <h1><strong>Manage Legacy Questionnaires</strong></h1>
+                            <p style="color: red;font-size:13px;margin-top:10px;">{{'LEGACY_QUESTIONNAIRE.WARNING'|translate}}</p>
                         </div>
+
                         <!-- Breadcrumbs -->
                         <div class="col-md-6 title-breadcrumbs">
                             <a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/legacy-questionnaire">Legacy Questionnaires</a>
