Finished translating Posts section.

--- a/templates/post/post.html
+++ b/templates/post/post.html
@@ -74,7 +74,7 @@
                             <div class="panel-container" ng-if="!postChartLogs.length">
                                 <div class="panel-info">
                                     <div class="jumbotron content" style="background-color: transparent; margin-bottom:0">
-                                        <p style="font-size:45px;">No data available</p>
+                                        <p style="font-size:45px;">{{'POSTS.LIST.NO_DATA'|translate}}</p>
                                     </div>
                                 </div>
                             </div>
