--- a/templates/processingModal.html
+++ b/templates/processingModal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h1> Processing...</h1>
+  <h1> {{'PROCESSING.TITLE'|translate}}</h1>
 </div>
 <div class="modal-body">
   <div class="progress progress-striped active">
