Translated edit post page

--- a/templates/post/add.post.html
+++ b/templates/post/add.post.html
@@ -62,7 +62,7 @@
                                 <div ng-if="newPost.type" class="description">
                                     <p>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                                        {{newPost.type.name_displayPublish Date}}
+                                        {{newPost.type.name_display}}
                                     </p>
                                 </div>
                             </div>
