Fixed french typos.

--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -66,7 +66,7 @@
 											<h1>{{'QUESTIONNAIRE_MODULE.DASHBOARD.MANAGE_QUESTIONS'|translate}}</h1>
 										</div>
 										<div class="panel-description">
-											<p>{{'QUESTIONNAIRE_MODULE.DASHBOARD.MANAGE_QUESTIONNAIRES_SUB'|translate}}</p>
+											<p>{{'QUESTIONNAIRE_MODULE.DASHBOARD.MANAGE_QUESTIONS_SUB'|translate}}</p>
 										</div>
 									</div>
 								</div>
