--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -382,12 +382,12 @@
                                             <input class="form-control" style="width:35%" type="text" ng-model="newTemplateQuestion.options.minCaption_FR" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_MIN_CAPTION_FR'|translate}}" ng-required="atCategory.category_EN === 'Slider'" />
                                         </div>
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                                            <input class="form-control" style="width:20%" type="number" placeholder="Maximum value" ng-model="newTemplateQuestion.options.maxValue" ng-required="atCategory.category_EN === 'Slider'" />
-                                            <input class="form-control" style="width:35%" type="text" ng-model="newTemplateQuestion.options.maxCaption_EN" placeholder="Maximum caption (EN)" ng-required="atCategory.category_EN === 'Slider'" />
-                                            <input class="form-control" style="width:35%" type="text" ng-model="newTemplateQuestion.options.maxCaption_FR" placeholder="Maximum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" />
+                                            <input class="form-control" style="width:20%" type="number" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_MAX_VALUE'|translate}}" ng-model="newTemplateQuestion.options.maxValue" ng-required="atCategory.category_EN === 'Slider'" />
+                                            <input class="form-control" style="width:35%" type="text" ng-model="newTemplateQuestion.options.maxCaption_EN" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_MAX_CAPTION_EN'|translate}}" ng-required="atCategory.category_EN === 'Slider'" />
+                                            <input class="form-control" style="width:35%" type="text" ng-model="newTemplateQuestion.options.maxCaption_FR" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_MAX_CAPTION_FR'|translate}}" ng-required="atCategory.category_EN === 'Slider'" />
                                         </div>
                                         <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                                            <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="newTemplateQuestion.options.increment" ng-required="atCategory.category_EN === 'Slider'"/>
+                                            <input class="form-control" style="width:20%" type="number" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_ADD.PLACEHOLDER_INCREMENT'|translate}}" ng-model="newTemplateQuestion.options.increment" ng-required="atCategory.category_EN === 'Slider'"/>
                                         </div>
                                     </div>
                                     <div class="col-xs-12 col-md-8">
