--- a/templates/questionnaire/add.template.question.html
+++ b/templates/questionnaire/add.template.question.html
@@ -173,7 +173,7 @@
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                                        <span class="fas fa-dot-circle"></span><h2>Name</h2>
+                                        <span class="fas fa-dot-circle"></span><h2>{{'QUESTIONNAIRE_MODULE.TEMPLATE_QUESTION_ADD.NAME'|translate}}</h2>
                                     </span>
                                 </div>
                             </div>
