Translated edit hospital map section.

--- a/templates/hospital-map/add.hospital-map.html
+++ b/templates/hospital-map/add.hospital-map.html
@@ -70,7 +70,7 @@
                                 </div>
                                 <div ng-if="newHosMap.name_FR || newHosMap.description_FR" class="description">
                                     <p ng-if="newHosMap.name_FR" style="margin-bottom:5px;">
-                                        <strong>{{'HOSPITAL_MAPS.ADD.FRENCH_ABVR'|translate}}</strong>
+                                        <strong>{{'HOSPITAL_MAPS.ADD.FRENCH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newHosMap.name_FR}}
                                     </p>
@@ -101,7 +101,7 @@
                                 </div>
                                 <div ng-if="newHosMap.url_FR" class="description">
                                     <p>
-                                        <strong>{{'HOSPITAL_MAPS.ADD.FRENCH_ABVR'|translate}}</strong>
+                                        <strong>{{'HOSPITAL_MAPS.ADD.FRENCH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newHosMap.url_FR}}
                                     </p>
