--- a/templates/post/add.post.html
+++ b/templates/post/add.post.html
@@ -90,7 +90,7 @@
                                 </div>
                                 <div ng-if="newPost.name_FR" class="description">
                                     <p style="margin-bottom:5px;">
-                                        <strong>{{'POSTS.ADD.FRENCH_ABVR'|translate}}</strong>
+                                        <strong>{{'POSTS.ADD.FRENCH_ABRV'|translate}}</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         {{newPost.name_FR}}
                                     </p>
