--- a/templates/questionnaire/edit.question.html
+++ b/templates/questionnaire/edit.question.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                         <div class="input-group">
-                            <span class="input-group-addon">{{'QUESTIONNAIRE_MODULE.QUESTION_EDIT.FRENCH_ABVR'|translate}}</span>
+                            <span class="input-group-addon">{{'QUESTIONNAIRE_MODULE.QUESTION_EDIT.FRENCH_ABRV'|translate}}</span>
                             <input type="text" class="form-control" ng-model="question.question_FR" placeholder="{{'QUESTIONNAIRE_MODULE.QUESTION_EDIT.FRENCH_TITLE'|translate}}" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
                         </div>
                     </div>
