--- a/templates/post/edit.post.html
+++ b/templates/post/edit.post.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                     <div class="input-group">
-                        <span class="input-group-addon">{{'POSTS.EDIT.FRENCH_ABVR'|translate}}</span>
+                        <span class="input-group-addon">{{'POSTS.EDIT.FRENCH_ABRV'|translate}}</span>
                         <input class="form-control" type="text" ng-model="post.name_FR" ng-change="detailsUpdated()" placeholder="{{'POSTS.EDIT.FRENCH_TITLE'|translate}}" required="required">
                     </div>
                 </div>
